typescript/checker/tests/conformance/es6/yieldExpressions/YieldExpression5_es6.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression5_es6.ts:4:1
  |
4 | }
  | ^

